css/impress-taw.css
/* ... */
.impress-enabled #impress {
    pointer-events: auto
}

#handson .get {
    position: absolute;
    top: -300px;
    display: block;
    font-size: 120px;
    line-height: 120px;
    
}
#self-directed li {
    position: absolute;
    top: -70px;
    display: block;
    font-size: 60px;
    line-height: 60px;
    
}
#community li {
    position: absolute;
    top: 00px;
    display: block;
    font-size: 60px;
    line-height: 60px;
    
}
#handsonsub li {
    position: absolute;
    top: 70px;
    display: block;
    font-size: 60px;
    line-height: 60px;
    
}
#training li {
    position: absolute;
    top: 140px;
    display: block;
    font-size: 60px;
    line-height: 60px;
    
}
/*
    There is one funny thing I just realized.

    Thanks to this workaround above everything except #impress element is invisible
    for click events. That means that the hint element is also not clickable.
    So basically all of this transforms and delayed transitions trickery was probably
    not needed at all...

    But it was fun to learn about it, wasn't it?
*/

/*
    That's all I have for you in this file.
    Thanks for reading. I hope you enjoyed it at least as much as I enjoyed writing it
    for you.
*/
/*
    ... and we want 'positioning` word to move up a bit when the step gets
    `present` class ...
*/
#travel-step-1 p {
    font-size: 100px;
}

#travel-step-2 p {
    font-size: 100px;
}

#travel-step-3 p {
    font-size: 100px;
}

#travel-step-4 b {
    display: block;
    font-size: 180px;
    line-height: 180px;
}

/*
    ... and we want 'positioning` word to move up a bit when the step gets
    `present` class ...
*/
#travel-step-4 .feasibility {
    position: absolute;
    right: 400px;
    top: -100px;
    -webkit-transform: rotate(-10deg);
    -moz-transform: rotate(-10deg);
    -ms-transform: rotate(-10deg);
    -o-transform: rotate(-10deg);
    transform: rotate(-10deg);
    -webkit-transition-delay: 0.25s;
    -moz-transition-delay: 0.25s;
    -ms-transition-delay: 0.25s;
    -o-transition-delay: 0.25s;
    transition-delay: 0.25s;
}

/*
    ... 'rotating' to rotate a quarter of a second later ...
*/
#travel-step-4 .creativity {
    position: absolute;
    right: 100px;
    -webkit-transform: rotate(-10deg);
    -moz-transform: rotate(-10deg);
    -ms-transform: rotate(-10deg);
    -o-transform: rotate(-10deg);
    transform: rotate(-10deg);
    -webkit-transition-delay: 0.25s;
    -moz-transition-delay: 0.25s;
    -ms-transition-delay: 0.25s;
    -o-transition-delay: 0.25s;
    transition-delay: 0.25s;
}

/*
    ... and 'scaling' to scale down after another quarter of a second.
*/
#travel-step-4 .sellability {
    position: absolute;
    right: -400px;
    top: 150px;
    -webkit-transform: rotate(-10deg);
    -moz-transform: rotate(-10deg);
    -ms-transform: rotate(-10deg);
    -o-transform: rotate(-10deg);
    transform: rotate(-10deg);
    -webkit-transition-delay: 0.5s;
    -moz-transition-delay: 0.5s;
    -ms-transition-delay: 0.5s;
    -o-transition-delay: 0.5s;
    transition-delay: 0.5s;
}

#travel-step-5 .big {
    position: absolute;
    left: -250px;
    top: -0px;
    display: block;
    font-size: 70px;
    line-height: 70px;
    
}

#attendance img {
    position: absolute;
    top: 260px;
}

#crowdsource img {
    position: absolute;
    top: -300px;
    left: -320px;
    width: 1500px;
    height: 750px;
}

#audience p {
    font-size: 170px;
}

#travel-innovation-opener p {
     font-size: 170px;
     text-align: center;
}

#its-in-3d p {
     font-size: 100px;
}

